--- a/css/news.css
+++ b/css/news.css
@@ -180,3 +180,23 @@
     height: auto;
     border-radius: 10px;
 }
+
+@media (max-width: 860px) {
+    .newsContainer {
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+    }
+    .listNewsContainer {
+        order: 1;
+        width: 100%;
+        max-width: 100vw;
+        margin: 0 auto;
+    }
+    .socialMediaContainer {
+        order: 2;
+        width: 100%;
+        max-width: 100vw;
+        margin: 0 auto;
+    }
+}
